updated .profile-pic in CSS

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -254,3 +254,9 @@ button:focus,
 a {
 	color: var(--primary-color);
 }
+
+.profile-pic {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
