removed !important on white button color

--- a/CSS/style.production.css
+++ b/CSS/style.production.css
@@ -61,7 +61,7 @@ button {
 	-webkit-transition-property: opacity;
 	-o-transition-property: opacity;
 	transition-property: opacity;
-	color: white !important;
+	color: white;
 }
 
 button {
