added all post css for index.html profilen content

--- a/CSS/style.production.css
+++ b/CSS/style.production.css
@@ -338,3 +338,38 @@ button:focus,
 a {
 	color: #357b70;
 }
+
+.profile-pic {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+}
+
+.profile-container {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+}
+
+.description {
+	margin-left: 1rem;
+	max-width: 300px
+}
+
+@media screen and (max-width: 500px) {
+	.profile-container {
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: column;
+		        flex-direction: column;
+	}
+	.description {
+		text-align: center;
+	}
+}
