added align-content to media query in css

--- a/CSS/style.production.css
+++ b/CSS/style.production.css
@@ -373,7 +373,14 @@ a {
 		-webkit-box-direction: normal;
 		    -ms-flex-direction: column;
 		        flex-direction: column;
+		-ms-flex-line-pack: center;
+		    align-content: center;
 	}
+	.description {
+		text-align: center;
+	}
+}
+
 	.description {
 		text-align: center;
 	}
