added margin and width to media query in style.production.css

--- a/CSS/style.production.css
+++ b/CSS/style.production.css
@@ -373,6 +373,9 @@ a {
 		-webkit-box-direction: normal;
 		    -ms-flex-direction: column;
 		        flex-direction: column;
+		margin-left: auto;
+		margin-right: auto;
+		width: 50%;
 	}
 	.description {
 		text-align: center;
