added margin and width in CSS

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -276,6 +276,9 @@ a {
 @media screen and (max-width: 500px) {
 	.profile-container {
 		flex-direction: column;
+		margin-left: auto;
+		margin-right: auto;
+		width: 50%;
 	}
 	.description {
 		text-align: center;
