--- a/CSS/style.production.css
+++ b/CSS/style.production.css
@@ -375,10 +375,17 @@ a {
 		        flex-direction: column;
 		margin-left: auto;
 		margin-right: auto;
-		margin-top: auto;
+		text-align: center;
+		padding-top: 10px;
 	}
 	.description {
 		margin-left: auto;
 		margin-right: auto;
+	}
+}
+
+@media screen and (max-width: 500px) {
+	.profile-pic {
+		padding-left: 41px;
 	}
 }
